# clipboard-transformer

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  gui.cpp  gui.h  layout2.glade  main.cpp  overlay  overlay.c  textEntry.c  textEntry.h  transformation.cpp  transformation.h
src/ClipboardHelper/: CMakeLists.txt  DarwinClipboardHelper.mm  UbuntuClipboardHelper.cpp
src/DarwinClipboardHelper/: CMakeLists.txt  DarwinClipboardHelper.h  DarwinClipboardHelper.mm
test/: CMakeLists.txt  test_transforms.c
transformations/: CMakeLists.txt  Makefile  all_transformations.c  all_transformations.h  cleanjson.c  lowercase.c  noformat.c  nopunc.c  oink.c  parsehtml.c  uppercase.c
